# cxgn

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: cxgn.pc.in  cxgnConfig.cmake.in
examples/batch/: CMakeLists.txt  main.c  strategies.all.gen.h  strategy.h
examples/batch/strategies/: alpha.yaml  beta.yaml
examples/minimal/: CMakeLists.txt  main.c  scene.gen.h  scene.h  scene.yaml
include/cxgen/: Array.hpp  OneOf.hpp  Optional.hpp  cxgen.h
include/cxgn/: Array.hpp  Optional.hpp  batch.h  cxgn.h  macros.h
src/: batch.c  code_generator.c  document.c  glob.c  internal.h  main.c  path.c  string_utils.c  struct_parser.c  yaml_document.c  yaml_stubs.c
tests/: .clangd  .gitignore  CMakeLists.txt  all_types.gen.h  all_types.gen.hpp  all_types.test.c  batch.test.c  capability.test.c  cli.test.c  cli_plan_batch.gen.h  cli_plan_simple.gen.h  code_generator.test.c  document.test.c  document_merge.test.c  errors.test.c  hexapod_leg.test.c  integration.test.c  map.test.c  optional_wrapper.test.cpp  out17.gen.hpp  ownership.test.c  path.test.c  scene.gen.h  shapes.test.c  string_utils.test.c  struct_parser.test.c  struct_parser_text.test.c  type_options.test.c  validation.test.c  vec3.test.c  warning_colors.test.c  yaml_document.test.c  yaml_types.test.c
tests/fixtures/: HexapodLeg.h  HexapodLeg.hpp  HexapodLeg.yaml  Vec3.h  Vec3.hpp  Vec3.yaml  all_types.h  all_types.hpp  all_types.yaml  arrays.h  arrays.hpp  arrays.yaml  cli_plan.yaml  expr.h  expr.yaml  invalid_missing_simple.yaml  main.h  main.hpp  map.h  map.yaml  naming.h  naming.hpp  naming.yaml  nested.h  nested.hpp  nested.yaml  oneof.h  oneof.hpp  oneof.yaml  optionals.h  optionals.hpp  optionals.yaml  qualified_arrays.h  qualified_arrays.yaml  scene.h  scene.hpp  scene.yaml  shapes.h  shapes.hpp  shapes_circle.yaml  (+16 more)
tests/fixtures/batch/: alpha.yaml  beta.yaml
tests/fixtures/batch/sub/: alpha.yaml  gamma.yaml
